BugFix #4285 - added vertical alignment
Added the vertical alignment : middle property to the icon so that it will align itself properly. 
BugFix to #4285.
Credits : @jacekkarczmarczyk
Source of inspiration: https://codepen.io/anon/pen/ERvjEE

--- a/src/stylus/components/_progress-circular.styl
+++ b/src/stylus/components/_progress-circular.styl
@@ -3,6 +3,7 @@
 .v-progress-circular
   position: relative
   display: inline-flex
+  vertical-align: middle
 
   svg
     width: 100%
